--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -7,7 +7,8 @@
             {% verbatim %}
                 <div ng-app="project">
                     <div ng-controller="projectCtrl">
-                        <h2>{{projects}}</h2>
+                       <h2>{{projects}}</h2> 
+                        <div class="text-center" ng-repeat="project in projects">{{project.id}} {{project.title}}</div>
 
                     </div>
                 </div>
