--- a/app/Resources/views/site/projets.html.twig
+++ b/app/Resources/views/site/projets.html.twig
@@ -10,32 +10,31 @@
             {% verbatim %}
                 <div ng-app="project">
                     <div ng-controller="projectCtrl">
-                        <div  ng-repeat="theme in themes" ng-click="getSousThemesT(sousTheme.fktheme.id)">
+                        <div  ng-repeat="theme in themes" ng-click="getSousThemesT(theme.id)">
                             <h4 class="theme">
                                 THEME :{{theme.title}}
                             </h4>
                         </div>
-                        <div class="text-center" ng-repeat="sousTheme in sousThemes" ng-click="getSousThemesT(sousTheme.fktheme.id)" ng-show="showSousThemes">
+                        <div class="text-center" ng-repeat="sousTheme in sousThemes" ng-click="getProjectsFromSousTheme(sousTheme.id)" ng-show="showSousThemes">
                             <h4 class="soustheme">
                                 SOUS THEME :{{sousTheme.title}} {{sousTheme.fktheme.id}}
                         </div>
-                        <div class="text-center" ng-repeat="project in projects" ng-click="getTasks()" ng-show="showProjects">
+                        <div class="text-center" ng-repeat="project in projects" ng-click="getTasksFromProject(project.id)" ng-show="showProjects">
                             <h5 class="projects">
                                 PROJECTS :
                                 {{project.id}} 
                                 {{project.title}}
-                                {{project.sousTheme}}
                                 {{project.userBoss}}
                                 {{project.userColab}}
                                 {{project.text}}
-                            </h5>Domotique
+                            </h5>
                         </div>
-                        <div class="text-center" ng-click="getPosts()" ng-show="showTasks()" ng-repeat="task in tasks">
+                        <div class="text-center" ng-click="getPostsFromTask(task.id)" ng-show="showTasks" ng-repeat="task in tasks">
                             <h6 class="tasks">
                                 TASKS :{{task.title}}
                             </h6>
                         </div>
-                        <div class="text-center" ng-repeat="post in posts">
+                        <div class="text-center" ng-repeat="post in posts" ng-show="showPosts">
                             <h6 class="posts">
                             POSTS :
                             {{post.title}}
